-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.0.30
-
Component/s: Compiling
-
Labels:None
-
Environment:Gentoo
Compiling errors out fairly quickly with -DWITHOUT_SERVER=1 with 10.0.30
Error is below and a full log is attached.
[ 5%] Building C object strings/CMakeFiles/strings.dir/ctype-simple.c.o
|
cd /var/tmp/portage/dev-db/mariadb-10.0.30/work/mysql-abi_x86_64.amd64/strings && /usr/bin/x86_64-pc-linux-gnu-gcc -DDISABLE_MYSQL_THREAD_H -DHAVE_CONFIG_H -D_FILE_OFFSET_BITS=64 -I/var/tmp/portage/dev-db/mariadb-10.0.30/work/mysql-abi_x86_64.amd64/include -I/var/tmp/portage/dev-db/mariadb-10.0.30/work/mysql/include -O2 -pipe -g -fno-strict-aliasing -DNDEBUG -DDBUG_OFF -fPIC -o CMakeFiles/strings.dir/ctype-simple.c.o -c /var/tmp/portage/dev-db/mariadb-10.0.30/work/mysql/strings/ctype-simple.c
|
In file included from /var/tmp/portage/dev-db/mariadb-10.0.30/work/mysql/strings/ctype-simple.c:19:0:
|
/var/tmp/portage/dev-db/mariadb-10.0.30/work/mysql/include/my_sys.h:600:43: error: unknown type name ‘PSI_file_key’
|
extern int my_handler_delete_with_symlink(PSI_file_key key, const char *name,
|