MDEV-12230 include/my_sys.h:600:43: error: unknown type name ‘PSI_file_key’" when -DWITHOUT_SERVER=1

cherry-pick 2c2bd8c155 (MDEV-12261 build failure without P_S) from 10.0