include/mysql/psi/mysql_file.h
@@ -435,6 +435,20 @@
 #endif
 
 /**
+  @def mysql_file_delete_with_symlink(K, P1, P2, P3)
+  Instrumented delete with symbolic link.
+  @c mysql_file_delete_with_symlink is a replacement
+  for @c my_handler_delete_with_symlink.
+*/
+#ifdef HAVE_PSI_INTERFACE
+  #define mysql_file_delete_with_symlink(K, P1, P2, P3) \
+  inline_mysql_file_delete_with_symlink(K, __FILE__, __LINE__, P1, P2, P3)
+#else
+  #define mysql_file_delete_with_symlink(K, P1, P2, P3) \
+  inline_mysql_file_delete_with_symlink(P1, P2, P3)
+#endif
+
+/**
   @def mysql_file_rename_with_symlink(K, P1, P2, P3)
   Instrumented rename with symbolic link.
   @c mysql_file_rename_with_symlink is a replacement
@@ -1305,6 +1319,7 @@ inline_mysql_file_rename(
   return result;
 }
 
+
 static inline File
 inline_mysql_file_create_with_symlink(
 #ifdef HAVE_PSI_INTERFACE
@@ -1333,6 +1348,38 @@ inline_mysql_file_create_with_symlink(
 #endif
   return file;
 }
+
+static inline int
+inline_mysql_file_delete_with_symlink(
+#ifdef HAVE_PSI_INTERFACE
+  PSI_file_key key, const char *src_file, uint src_line,
+#endif
+  const char *name, const char *ext, myf flags)
+{
+  int result;
+  char fullname[FN_REFLEN];
+#ifdef HAVE_PSI_INTERFACE
+  struct PSI_file_locker *locker= NULL;
+  PSI_file_locker_state state;
+#endif
+  fn_format(fullname, name, "", ext, MY_UNPACK_FILENAME | MY_APPEND_EXT);
+#ifdef HAVE_PSI_INTERFACE
+  if (likely(PSI_server != NULL))
+  {
+    locker= PSI_server->get_thread_file_name_locker(&state, key, PSI_FILE_DELETE,
+                                                    fullname, &locker);
+    if (likely(locker != NULL))
+      PSI_server->start_file_wait(locker, (size_t) 0, src_file, src_line);
+  }
+#endif
+  result= my_handler_delete_with_symlink(fullname, flags);
+#ifdef HAVE_PSI_INTERFACE
+  if (likely(locker != NULL))
+    PSI_server->end_file_wait(locker, (size_t) 0);
+#endif
+  return result;
+}
+
 
 static inline int
 inline_mysql_file_rename_with_symlink(
